Update asset display

--- a/app/modules/assetManagement/less/asset.less
+++ b/app/modules/assetManagement/less/asset.less
@@ -63,11 +63,10 @@
           font-weight: @font-weight;
         }
         .asset-preview-description,
-        .asset-size {
+        .asset-size,
+        .asset-tags,
+        .asset-preview-type {
           margin-bottom: 25px;
-        }
-        .asset-tags {
-          margin-bottom: 30px;
         }
     }
 
