--- a/app/modules/assetManagement/templates/assetManagementPreview.hbs
+++ b/app/modules/assetManagement/templates/assetManagementPreview.hbs
@@ -6,30 +6,30 @@
 
     {{#ifValueEquals type "video"}}
       <video preload="auto" controls width="640px" height="360px" poster="" style="width:100%; height:100%;">
-        <source src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{mimeType}}"/>
+        <source src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{type}}/{{subType}}"/>
       </video>
     {{/ifValueEquals}}
 
     {{#ifValueEquals type "audio"}}
-      <i class="fa fa-file-audio-o"></i>
-      <audio src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{mimeType}}" controls="controls" style="width:100%;"></audio>
-    {{/ifValueEquals}}
-
-    {{#ifValueEquals type "other"}}
-      <i class="fa fa-file-o"></i>
+      <audio src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{type}}/{{subType}}" controls="controls" style="width:100%;"></audio>
     {{/ifValueEquals}}
   </div>
 
   <h1 class="asset-preview-title">{{title}}</h1>
   <div class="asset-preview-description">{{description}}</div>
+  
+  <div class="asset-type">
+    <i class="fa {{iconName}}"></i>&nbsp;<span>{{type}}/{{subtype}}</span>
+  </div>
+  
   <div class="asset-size">{{t 'app.assetsize'}}: {{{bytesToSize size}}}</div>
 
-  {{#if metadata.duration}}
+  {{#if duration}}
     <div class="asset-duration break">{{t 'app.assetduration'}}: {{{formatDuration metadata.duration}}}</div>
   {{/if}}
 
-  {{#if metadata.height}}
-    <div class="asset-height">{{t 'app.assetdimensions'}}: {{{metadata.width}}} x {{{metadata.height}}}</div>
+  {{#if resolution}}
+    <div class="asset-height">{{t 'app.assetdimensions'}}: {{resolution}}</div>
   {{/if}}
 
   {{#if tagsMapped.length}}
