Fix thumb rendering for assets without thumbs

--- a/app/modules/assetManagement/templates/assetManagementNewAsset.hbs
+++ b/app/modules/assetManagement/templates/assetManagementNewAsset.hbs
@@ -1,5 +1,5 @@
 <div class="asset-management-new-asset-inner">
-    {{#if _id}}
+    {{#if hasThumb}}
         <div class="asset-thumb">
             <img src="/api/assets/serve/{{_id}}?thumb=true&{{timestring updatedAt}}"></img>
         </div>
