Move password validation to backend for consistency

--- a/app/core/less/sharedStyles.less
+++ b/app/core/less/sharedStyles.less
@@ -59,3 +59,15 @@
     }
   }
 }
+
+.feedback {
+  margin: 10px 0;
+  padding: 10px;
+  width: 89%;
+  background-color: @info-color;
+  font-weight: bold;
+  color: white;
+  border: 1px solid darken(@info-color, 20%);
+  border-radius: 3px;
+  border-left: 8px solid darken(@info-color, 20%);
+}
