Fix local RequireJS config path

--- a/app/core/index.hbs
+++ b/app/core/index.hbs
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="/require.js" data-main="/js/adapt.js"></script>
     {{else}}
     <script src="/require.js"></script>
-    <script src="/core/requireJsConfig.js"></script>
+    <script src="/js/requireJsConfig.js"></script>
     <script src="/core/app.js"></script>
     {{/if}}
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/ace.js"></script>
