--- a/app/modules/assetManagement/templates/assetManagementPreview.hbs
+++ b/app/modules/assetManagement/templates/assetManagementPreview.hbs
@@ -6,12 +6,12 @@
 
     {{#ifValueEquals type "video"}}
       <video preload="auto" controls width="640px" height="360px" poster="" style="width:100%; height:100%;">
-        <source src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{type}}/{{subType}}"/>
+        <source src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{type}}/{{subtype}}"/>
       </video>
     {{/ifValueEquals}}
 
     {{#ifValueEquals type "audio"}}
-      <audio src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{type}}/{{subType}}" controls="controls" style="width:100%;"></audio>
+      <audio src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{type}}/{{subtype}}" controls="controls" style="width:100%;"></audio>
     {{/ifValueEquals}}
   </div>
 
