--- a/app/modules/user/templates/login.hbs
+++ b/app/modules/user/templates/login.hbs
@@ -16,7 +16,7 @@
                 <button type="submit" class="btn secondary login-form-submit" tabindex="3">{{t 'app.login'}}</button>
             </div>
             <div class="login-remember-me">
-                <input id="remember-me" class="remember-me-checkbox" name="remember-me" type="checkbox"/>
+                <input checked id="remember-me" class="remember-me-checkbox" name="remember-me" type="checkbox"/>
                 <label for="remember-me" class="remember-me-label">{{t 'app.rememberme'}}</label>
             </div>
             {{#ifMailEnabled}}
