Localise limitedUser strings

--- a/app/modules/limiteduser/templates/limitedUser.hbs
+++ b/app/modules/limiteduser/templates/limitedUser.hbs
@@ -2,7 +2,7 @@
 	<div class="logo">
 		<img src="css/assets/adapt-learning-logo-outline.png">
 	</div>
-	<h1>Welcome to Adapt</h1>
-	<h3>This user account has limited access.</h3>
-	<p>If you're not expecting this page, please contact an administrator to set the correct user privileges for your account.</p>
+	<h1>{{t 'app.welcometitle'}}</h1>
+	<h3>{{t 'app.welcomelimitedtitle'}}</h3>
+	<p>{{t 'app.welcomelimitedmessage'}}</p>
 </div>
