--- a/app/modules/limiteduser/less/limitedUser.less
+++ b/app/modules/limiteduser/less/limitedUser.less
@@ -1,24 +1,29 @@
-.limiteduser {
-  &-inner {
-    max-width: 600px;
-    margin: 0 auto;
-    margin-top: 50px;
-    
-    .logo {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    h1 {
-      font-size: 60px;
-      text-align: center;
-    }
-    h3 {
-      font-size: 26px;
-      text-align: center;
-    }
-    p {
-      margin: 30px;
+body.module-limiteduser {
+  .contentPane {
+    overflow: hidden;
+  }
+  .limiteduser {
+    &-inner {
+      max-width: 600px;
+      margin: 0 auto;
+      margin-top: 50px;
+      
+      .logo {
+        text-align: center;
+        margin-bottom: 30px;
+      }
+  
+      h1 {
+        font-size: 60px;
+        text-align: center;
+      }
+      h3 {
+        font-size: 26px;
+        text-align: center;
+      }
+      p {
+        margin: 30px;
+      }
     }
   }
 }
