--- a/app/modules/projects/templates/projectsSidebar.hbs
+++ b/app/modules/projects/templates/projectsSidebar.hbs
@@ -2,9 +2,9 @@
 
   <div class="separator"></div>
 
-  {{#ifHasScopes "import:adapt"}}
-    <button class="projects-sidebar-import-course action-secondary">
-      <span class="projects-sidebar-import-course-inner">{{t 'app.importcourse'}}</span>
+  {{#ifHasScopes "create:adapt"}}
+    <button class="projects-sidebar-add-course action-primary">
+      <span class="projects-sidebar-add-course-inner">{{t 'app.addnewproject'}}</span>
     </button>
   {{/ifHasScopes}}
 
