--- a/app/modules/globalMenu/templates/partials/part_globalMenuButton.hbs
+++ b/app/modules/globalMenu/templates/partials/part_globalMenuButton.hbs
@@ -1,4 +1,4 @@
-<a href="#" class="navigation-item navigation-global-menu" data-event="globalMenu:toggle">
+<a href="#" class="navigation-global-menu" data-event="globalMenu:toggle">
   <div id="global-menu-icon">
     <span></span>
     <span></span>
