--- a/app/modules/frameworkImport/templates/partials/part_frameworkImportButton.hbs
+++ b/app/modules/frameworkImport/templates/partials/part_frameworkImportButton.hbs
@@ -1,3 +1,3 @@
-<button class="projects-sidebar-add-course action-primary">
-  <span class="projects-sidebar-add-course-inner">{{t 'app.addnewproject'}}</span>
+<button class="projects-sidebar-import-course action-secondary">
+  <span class="projects-sidebar-import-course-inner">{{t 'app.importcourse'}}</span>
 </button>
