--- a/app/modules/frameworkImport/templates/partials/part_frameworkImportStatusMessages.hbs
+++ b/app/modules/frameworkImport/templates/partials/part_frameworkImportStatusMessages.hbs
@@ -1,9 +1,9 @@
-{{#if data}}
+{{#if messages}}
   <div class="{{type}}">
-    <h3>{{t 'app.frameworkimportstatustitle{{type}}'}}</h3>
-    <div class"messages">
-      {{#each data}}
-        <div>{{t 'app.{{this.code}}' this.data}}</div>
+    <h3>{{heading}}</h3>
+    <div class="messages">
+      {{#each messages}}
+        <div>{{code}} {{data}}</div>
       {{/each}}
     </div>
   </div>
