--- a/app/core/less/buttons.less
+++ b/app/core/less/buttons.less
@@ -220,6 +220,9 @@ button {
 &.action-secondary {
     .primary-hollow;
 }
+&.action-tertiary {
+    .primary;
+}
 
 .warning {
     background-color:@button-warning-color;
