--- a/app/modules/frameworkImport/templates/frameworkImportSidebar.hbs
+++ b/app/modules/frameworkImport/templates/frameworkImportSidebar.hbs
@@ -1,9 +1,9 @@
 <div class="separator"></div>
 <div class="sidebar-item-inner">
-  <button type="submit" class="action-primary frameworkimport-import" disabled>
+  <button type="submit" class="action-primary frameworkimport import display-none">
     <span>{{t 'app.importcourse'}}</span>
   </button>
-  <button type="submit" class="action-secondary frameworkimport-check">
+  <button type="submit" class="action-tertiary frameworkimport check">
     <span>{{t 'app.checkimport'}}</span>
   </button>
   <button type="button" class="cancel action-secondary">
