Update framework summary

--- a/app/modules/frameworkImport/less/frameworkImport.less
+++ b/app/modules/frameworkImport/less/frameworkImport.less
@@ -100,4 +100,22 @@ button.frameworkimport-import:disabled {
       h3 { background-color: @info-color; }
     }
   }
+
+  .versions {
+    margin-bottom: 20px;
+    h2 {
+      font-size: 16px;
+    }
+    table {
+      width: 100%;
+      th { 
+        padding: 15px;
+        font-size: 14px;
+      }
+      td { 
+        padding: 10px;
+        text-align: center; 
+      }
+    }
+  }
 }
