--- a/app/modules/frameworkImport/templates/frameworkImportSummary.hbs
+++ b/app/modules/frameworkImport/templates/frameworkImportSummary.hbs
@@ -7,10 +7,36 @@
         {{t 'app.coursecannotbeimported'}}
       {{/if}}
     </div>
+    <p>See below for a summary of the course to be imported.</p>
+    <div class="content">
+      <h2>Content summary</h2>
+    </div>`
+    <div class="versions">
+      <h2>Plugin versions</h2>
+      <table>
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Installed version</th>
+            <th scope="col">Import version</th>
+            <th scope="col">Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each versions}}
+            <tr>
+              <td scope="col">{{name}}</td>
+              <td scope="col">{{versions.[0]}}</td>
+              <td scope="col">{{versions.[1]}}</td>
+              <td scope="col">{{status}}</td>
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
     <div class="statusReport">
       {{> part_frameworkImportStatusMessages type='error' messages=statusReport.error heading='Errors'}}
       {{> part_frameworkImportStatusMessages type='warn' messages=statusReport.warn heading='Warnings'}}
       {{> part_frameworkImportStatusMessages type='info' messages=statusReport.info heading='Information'}}
-    </div>
     </div>
 </div>
