Add HTML rendering to text areas

--- a/app/modules/editor/contentObject/templates/editorPageComponent.hbs
+++ b/app/modules/editor/contentObject/templates/editorPageComponent.hbs
@@ -3,7 +3,7 @@
 <div class="component-inner">
   <div class="component-detail no-select">
     <div class="component-type">{{getComponentDisplayName _component}}</div>
-    <h4 class="component-title">{{#if displayTitle}}{{displayTitle}}{{else}}{{title}}{{/if}}</h4>
+    <h4 class="component-title">{{#if displayTitle}}{{{displayTitle}}}{{else}}{{{title}}}{{/if}}</h4>
     <div class="component-body">{{{body}}}</div>
   </div>
 </div>
