--- a/app/modules/editor/global/templates/partials/part_editorItemSidebar.hbs
+++ b/app/modules/editor/global/templates/partials/part_editorItemSidebar.hbs
@@ -27,7 +27,7 @@
     {{/if}}
 
     <div class="{{_type}}-detail-inner editor-page-element-detail-inner">
-      <h4 class="{{_type}}-title title">{{#if displayTitle}}{{{displayTitle}}}{{else}}{{title}}{{/if}}</h4>
+      <h4 class="{{_type}}-title title">{{#if displayTitle}}{{{displayTitle}}}{{else}}{{{title}}}{{/if}}</h4>
     </div>
 
     {{#if _isCollapsible}}
