--- a/app/modules/editor/contentObject/templates/editorPage.hbs
+++ b/app/modules/editor/contentObject/templates/editorPage.hbs
@@ -2,9 +2,9 @@
   <div class="page-detail">
     <h4 class="page-name title">
       <button class="page-edit-button" title="{{t 'app.clicktoedit'}}"><i class="fa fa-cog fa-fw"></i></button>
-      {{#if displayTitle}}{{displayTitle}}{{else}}{{title}}{{/if}}
+      {{#if displayTitle}}{{{displayTitle}}}{{else}}{{{title}}}{{/if}}
     </h4>
-    <div class="page-body">{{body}}</div>
+    <div class="page-body">{{{body}}}</div>
   </div>
 
   <div class="page-articles"></div>
