--- a/app/core/less/colours.less
+++ b/app/core/less/colours.less
@@ -41,8 +41,8 @@
 // Layout colors
 /////////*/
 
-@navigation-text-color: @white;
-@navigation-hover-text-color: darken(@navigation-text-color, 2%);
+@appHeader-text-color: @white;
+@appHeader-hover-text-color: darken(@appHeader-text-color, 2%);
 
 @sidebar-title-text-color: @white;
 @sidebar-color: @tertiary-color;
