--- a/app/core/less/sharedStyles.less
+++ b/app/core/less/sharedStyles.less
@@ -34,7 +34,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  .sidebar, .navigation, .location-title {
+  .sidebar, .appHeader, .location-title {
     display: none;
   }
 }
