--- a/app/modules/globalMenu/less/globalMenu.less
+++ b/app/modules/globalMenu/less/globalMenu.less
@@ -9,12 +9,12 @@
 
   a {
     display:block;
-    color:@navigation-text-color;
+    color:@appHeader-text-color;
     text-decoration: none;
     border-bottom:1px solid lighten(@primary-color, 10%);
     &:hover {
       background-color:lighten(@primary-color, 10%);
-      color:@navigation-text-color;
+      color:@appHeader-text-color;
     }
   }
 
@@ -41,8 +41,8 @@
   }
 }
 
-.navigation-global-menu {
-  .navigation-item;
+.appHeader-global-menu {
+  .appHeader-item;
 }
 
 #global-menu-icon {
