--- a/app/modules/contentHeader/templates/contentHeader.hbs
+++ b/app/modules/contentHeader/templates/contentHeader.hbs
@@ -1,4 +1,4 @@
-<div class="location-title-inner">
+<div class="contentHeader-inner">
   {{#if breadcrumbs}}
     <div class="breadcrumbs">
       {{#each breadcrumbs}}
