Update styles after contentHeader change

--- a/app/core/less/colours.less
+++ b/app/core/less/colours.less
@@ -55,8 +55,8 @@
 @sidebar-input-border-color: lighten(@sidebar-input-color, 10%);
 @sidebar-input-button-color: @sidebar-input-text-color;
 
-@location-title:#000;
-@location-background-color:@white;
+@contentHeader-title:#000;
+@contentHeader-background-color:@white;
 
 @option-color: @primary-color;
 @option-hover-color: darken(@option-color, 10%);
