--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -1,14 +1,14 @@
 @import 'colours';
 @import 'fonts';
 
-.location-title {
+.contentHeader {
   font-family: @font-title;
   font-size: 14px;
-  background-color: @location-background-color;
+  background-color: @contentHeader-background-color;
   border-bottom: 1px solid fade(@primary-color, 20%);
 
   &-inner {
-    color: @location-title;
+    color: @contentHeader-title;
     padding: 15px;
 
     .breadcrumbs {
