Add buttons container

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -42,5 +42,11 @@
         font-weight: @font-weight-bold;
       }
     }
+
+    .buttons {
+      position: relative;
+      float: right;
+      top: -53px;
+    }
   }
 }
