--- a/app/modules/contentHeader/templates/contentHeader.hbs
+++ b/app/modules/contentHeader/templates/contentHeader.hbs
@@ -27,8 +27,5 @@
       <div class="title">{{{title}}}</div>
     </div>
   {{/if}}
-  <div class="actions-container"></div>
-  <div class="filters-container"></div>
-  <div class="sorts-container"></div>
-  <div class="options-container"></div>
+  <div class="buttons"></div>
 </div>
