--- a/app/modules/contentHeader/templates/contentHeader.hbs
+++ b/app/modules/contentHeader/templates/contentHeader.hbs
@@ -27,5 +27,10 @@
       <div class="title">{{{title}}}</div>
     </div>
   {{/if}}
-  <div class="buttons"></div>
+  <div class="buttons">
+    <div class="options"></div>
+    <div class="sorts"></div>
+    <div class="filters"></div>
+    <div class="actions"></div>
+  </div>
 </div>
