Update actions button styling

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -47,6 +47,10 @@
       position: relative;
       float: right;
       top: -53px;
+
+      > div {
+        display: inline-block;
+      }
     }
   }
 }
