--- a/app/modules/contentHeader/templates/actionsButton.hbs
+++ b/app/modules/contentHeader/templates/actionsButton.hbs
@@ -1,1 +1,1 @@
-<button class="{{buttonClass}}" data-event="{{eventName}}">{{buttonText}}</button>
+<button class="btn {{buttonClass}}" data-event="{{eventName}}">{{buttonText}}</button>
