Update contentPane styling

--- a/app/modules/contentPane/less/contentPane.less
+++ b/app/modules/contentPane/less/contentPane.less
@@ -1,7 +1,5 @@
 .contentPane {
-  position: relative;
+  position: absolute;
   overflow-y: auto;
-  &-inner {
-    height: 100%;
-  }
+  width: 100%;
 }
