--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -2,6 +2,8 @@
 @import 'fonts';
 
 .contentHeader {
+  position: relative;
+  z-index: 5;
   font-family: @font-title;
   font-size: 14px;
   background-color: @contentHeader-background-color;
@@ -50,6 +52,77 @@
 
       > div {
         display: inline-block;
+      }
+
+      .filters {
+        .filter-toggle {
+          padding: 0 15px;
+          color: @primary-color;
+          i {
+            font-size: 18px;
+          }
+        }
+        .filter-buttons {
+          @keyframes slidein {
+            from { height: 0; opacity: 0; margin-top: 0; }
+            1% { height: inherit;  }
+            to { height: inherit; margin-top: 20px; opacity: 1; }
+          }
+          height: 0;
+          position: absolute;
+          overflow: hidden;
+          margin-left: -6px;
+          min-width: 200px;
+          background: @tertiary-color;
+          border-radius: @button-radius;
+          &.show { 
+            animation-name: slidein;
+            animation-duration: 0.3s;
+            animation-fill-mode: forwards;
+          }
+          .filters-title {
+            padding: 20px;
+            font-weight: bold;
+            color: white;
+          }
+          .filter-item {
+            display: block;
+            width: 100%;
+            padding: 15px 20px;
+            color: white;
+            text-align: left;
+            .label {
+              margin-bottom: 8px;
+            }
+            i,
+            input[type='checkbox'] {
+              margin-right: 8px;
+              color: @secondary-color;
+              accent-color: @secondary-color;
+            }
+            input[type='text'] {
+              color: white;
+              width: auto;
+              border-color: lighten(@tertiary-color, 15%);
+              background-color: lighten(@tertiary-color, 5%);
+              &::placeholder {
+                border-color: lighten(@tertiary-color, 15%);
+              }
+            }
+            .tags {
+              padding: 10px 0;
+              .tag {
+                padding: 5px;
+                background: lighten(@tertiary-color, 15%);
+                font-weight: bold;
+                cursor: pointer;
+                &.selected {
+                  color: @secondary-color;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
