--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -4,6 +4,7 @@
 .contentHeader {
   position: relative;
   z-index: 5;
+  min-height: 80px;
   font-family: @font-title;
   font-size: 14px;
   background-color: @contentHeader-background-color;
@@ -45,52 +46,57 @@
       }
     }
 
-    .buttons {
+    > .buttons {
       position: relative;
       float: right;
-      top: -53px;
+      top: -5px;
 
       > div {
         display: inline-block;
       }
 
-      .filters {
-        .filter-toggle {
-          padding: 0 15px;
-          color: @primary-color;
-          i {
-            font-size: 18px;
-          }
+      button.toggle {
+        padding: 0 15px;
+        color: @primary-color;
+        cursor: pointer;
+        i {
+          font-size: 18px;
         }
-        .filter-buttons {
-          @keyframes slidein {
-            from { height: 0; opacity: 0; margin-top: 0; }
-            1% { height: inherit;  }
-            to { height: inherit; margin-top: 20px; opacity: 1; }
-          }
-          height: 0;
-          position: absolute;
-          overflow: hidden;
-          margin-left: -6px;
-          min-width: 200px;
-          background: @tertiary-color;
-          border-radius: @button-radius;
-          &.show { 
-            animation-name: slidein;
-            animation-duration: 0.3s;
-            animation-fill-mode: forwards;
-          }
-          .filters-title {
-            padding: 20px;
-            font-weight: bold;
-            color: white;
-          }
-          .filter-item {
+      }
+      .buttons-container {
+        &.show { 
+          animation-name: slidein;
+          animation-duration: 0.3s;
+          animation-fill-mode: forwards;
+        }
+        @keyframes slidein {
+          from { height: 0; opacity: 0; margin-top: 0; }
+          1% { height: inherit;  }
+          to { height: inherit; margin-top: 20px; opacity: 1; }
+        }
+        height: 0;
+        position: absolute;
+        overflow: hidden;
+        margin-left: -6px;
+        min-width: 200px;
+        background: @tertiary-color;
+        border-radius: @button-radius;
+        
+        .title {
+          padding: 20px;
+          font-weight: bold;
+          color: white;
+        }
+        .items {
+          padding: 25px;
+          .item {
             display: block;
-            width: 100%;
-            padding: 15px 20px;
+            margin-bottom: 20px;
             color: white;
             text-align: left;
+            &:last-child {
+              margin-bottom: 0;
+            }
             .label {
               margin-bottom: 8px;
             }
@@ -99,6 +105,9 @@
               margin-right: 8px;
               color: @secondary-color;
               accent-color: @secondary-color;
+            }
+            input[type='radio'] {
+              display: none;
             }
             input[type='text'] {
               color: white;
@@ -122,6 +131,20 @@
               }
             }
           }
+        }
+      }
+
+      .actions {
+        margin: 10px;
+        margin-left: 0;
+      }
+      
+      .sorts .items > .item {
+        .direction i { 
+          color: rgba(255, 255, 255, 0.2); 
+        }
+        &.selected {
+          .direction i { color: @secondary-color; }
         }
       }
     }
