--- a/app/modules/contentHeader/templates/sortItem.hbs
+++ b/app/modules/contentHeader/templates/sortItem.hbs
@@ -1,5 +1,5 @@
-<input type="radio" id="{{@index}}" name="sort" value="{{@index}}">
-<label for="{{@index}}">
+<input type="radio" id="{{index}}" name="sort" value="{{index}}">
+<label for="{{index}}">
   <span class="direction">
     <i class="fa fa-sort-asc"></i>
     <i class="fa fa-sort-desc"></i>
