Update actions button margin

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -135,8 +135,8 @@
       }
 
       .actions {
-        margin: 10px;
-        margin-left: 0;
+        margin: 10px 20px;
+        margin-right: 0;
       }
       
       .sorts .items > .item {
