Add button content partial

--- a/app/modules/contentHeader/templates/actionsButton.hbs
+++ b/app/modules/contentHeader/templates/actionsButton.hbs
@@ -1,1 +1,3 @@
-<button class="btn {{buttonClass}}">{{buttonText}}</button>
+<button class="btn {{buttonClass}}">
+  {{> part_headerButtonContent}}
+</button>
