--- a/app/modules/contentHeader/templates/sortItem.hbs
+++ b/app/modules/contentHeader/templates/sortItem.hbs
@@ -5,6 +5,5 @@
     <i class="asc fa fa-sort-asc"></i>
     <i class="desc fa fa-sort-desc"></i>
   </span>
-  {{#if icon}}<i class="icon fa {{icon}}"></i>{{/if}}
-  {{buttonText}}
+  {{> part_headerButtonContent}}
 </label>
