--- a/app/modules/pluginManagement/templates/pluginManagement.hbs
+++ b/app/modules/pluginManagement/templates/pluginManagement.hbs
@@ -5,7 +5,11 @@
       <h4 class="pluginType-heading-title-inner tb-col-inner">{{t 'app.name'}}</h4>
     </div>
 
-    <div class="pluginType-heading pluginType-heading-description col-40">
+    <div class="pluginType-heading pluginType-heading-type col-10">
+      <h4 class="pluginType-heading-type-inner tb-col-inner">{{t 'app.type'}}</h4>
+    </div>
+
+    <div class="pluginType-heading pluginType-heading-description col-30">
       <h4 class="pluginType-heading-description-inner tb-col-inner">{{t 'app.description'}}</h4>
     </div>
 
@@ -17,11 +21,9 @@
       <h4 class="pluginType-heading-enabled-inner tb-col-inner">{{t 'app.enabled'}}</h4>
     </div>
 
-    {{#ifValueEquals type 'extension'}}
-      <div class="pluginType-heading pluginType-heading-addedDefault col-10 col-centered">
-        <h4 class="pluginType-heading-addedDefault tb-col-inner">{{t 'app.addedDefault'}}</h4>
-      </div>
-    {{/ifValueEquals}}
+    <div class="pluginType-heading pluginType-heading-addedDefault col-10 col-centered">
+      <h4 class="pluginType-heading-addedDefault tb-col-inner">{{t 'app.addedDefault'}}</h4>
+    </div>
 
     <div class="pluginType-heading pluginType-heading-action col-10 col-centered">
       <h4 class="pluginType-heading-action-inner tb-col-inner">{{t 'app.action'}}</h4>
