Add page-width restriction

--- a/app/modules/editor/contentObject/less/editorPage.less
+++ b/app/modules/editor/contentObject/less/editorPage.less
@@ -1,6 +1,9 @@
 @import 'colours';
 
 .page {
+  max-width: 1000px;
+  margin: 0 auto;
+
   .paste-zone {
       &-inner {
         text-align: center;
