Add contentPane options

--- a/app/modules/contentPane/less/contentPane.less
+++ b/app/modules/contentPane/less/contentPane.less
@@ -4,5 +4,12 @@
   width: 100%;
   &-inner {
     height: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+  &.full-width {
+    .contentPane-inner {
+      max-width: 100%;
+    }
   }
 }
