--- a/app/core/less/sharedStyles.less
+++ b/app/core/less/sharedStyles.less
@@ -47,12 +47,9 @@
 
 // Page-style form background
 .form-container-style {
-  max-width: 1000px;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
   border: 1px solid darken(@ui-content-color, 10%);
   background-color: @white;
+  margin: 30px;
   > .inner {
     padding: 30px;
     form .form-group {
