Add links styles

--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -161,4 +161,25 @@
       }
     }
   }
+
+  .links {
+    background: @tertiary-color;
+    .items {
+      text-align: center;
+      .item {
+        display: inline-block;
+        .btn {
+          color: white;
+          border: none;
+          border-radius: 0;
+          &:hover {
+            color: @secondary-color;
+          }
+          i {
+            margin-right: 8px;
+          }
+        }
+      }
+    }
+  }
 }
