--- a/app/modules/editor/pageStructure/less/editorPageComponentList.less
+++ b/app/modules/editor/pageStructure/less/editorPageComponentList.less
@@ -2,11 +2,20 @@
 
 .editor-component-list {
   position: fixed;
-  top: 0px;
-  // to avoid flicker when first rendered
-  right: -100vw;
-  height: 100%;
+  top: -20px;
+  right: 0;
+  height: 100vh;
+  width: 100vw;
   z-index: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: all 0.3s;
+  &.show {
+    opacity: 1;
+    top: 0;
+  }
 
   .click-capture {
     width: 100vw;
@@ -15,57 +24,54 @@
   }
 
   &-sidebar {
-    z-index: 5;
-    float: right;
-    width: 440px;
-    height: 100%;
-    background-color: @white;
-    box-shadow: 0px 0px 4px 0px #454545;
+    width: 800px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    overflow: hidden;
+    background-color: #fff;
+    box-shadow: 0 0 10px 0 #ccc;
+    border-radius: 5px;
   }
 
   &-sidebar-exit {
-    float: right;
-    margin: 3px 10px;
+    margin: 0 15px;
     font-size: 150%;
-    color: #7D7D7D;
-
-    &:hover {
-      cursor: pointer;
-    }
+    cursor: pointer;
   }
 
   &-sidebar-header {
     border-bottom: 1px solid #CCCCCC;
+    display: flex;
+    background: @tertiary-color;
+    color: white;
+    width: 100%;
+    align-items: center;
   }
 
-  &-sidebar-title-inner {
-    padding: 20px 20px 0px;
-  }
-
-  &-sidebar-body-inner {
-    padding-left: 20px;
+  .editor-component-list-sidebar-text {
+    flex: 2;
+    padding: 15px;
+    font-size: 15px;
   }
 
   &-sidebar-search {
-    &-icon {
-      position: relative;
-      left: 380px;
-      top: 33px;
-      font-size: 130%;
-      color: #B7B4B4;
-    }
-
+    flex: 1;
     &-field input {
-      margin: 0 0 25px 20px;
+      width: 100%;
       border-radius: 0;
       background-color: #F2F0F1;
     }
   }
 
   &-sidebar-list {
+    max-height: 600px;
     width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
     overflow-y: auto;
-    overflow-x: hidden;
   }
 
   &-sidebar-filter-half {
@@ -107,9 +113,7 @@
 
 .editor-component-list-item {
   position: relative;
-  width: 100%;
   padding: 0;
-  overflow: hidden;
   text-align: left;
   border-bottom: 1px solid #ccc;
   transition: background-color 0.3s;
