--- a/app/modules/editor/pageStructure/templates/editorPageComponentList.hbs
+++ b/app/modules/editor/pageStructure/templates/editorPageComponentList.hbs
@@ -1,27 +1,21 @@
 <div class="editor-component-list-sidebar">
     <div class="editor-component-list-sidebar-inner">
 
-        <div class="editor-component-list-sidebar-exit">
-          <i class="fa fa-times"></i>
-        </div>
-
         <div class="editor-component-list-sidebar-header">
-          <div class="editor-component-list-sidebar-title">
-            <h2 class="editor-component-list-sidebar-title-inner">{{t 'app.addcomponent'}}</h2>
-          </div>
-          <div class="editor-component-list-sidebar-body">
-              <div class="editor-component-list-sidebar-body-inner">
-                {{t 'app.pleaseselectcomponent'}}
-              </div>
+          <div class="editor-component-list-sidebar-text">
+            <div class="editor-component-list-sidebar-title">
+              <h2 class="editor-component-list-sidebar-title-inner">{{t 'app.pleaseselectcomponent'}}</h2>
+            </div>
           </div>
 
           <div class="editor-component-list-sidebar-search">
-            <div class="editor-component-list-sidebar-search-icon">
-              <i class="fa fa-search"></i>
-            </div>
             <div class="editor-component-list-sidebar-search-field">
               <input type="search" placeholder="{{t 'app.typetofiltercomponents'}}"/>
             </div>
+          </div>
+
+          <div class="editor-component-list-sidebar-exit">
+            <i class="fa fa-times"></i>
           </div>
 
         </div>
