--- a/app/modules/editor/pageStructure/templates/editorPageComponentListItem.hbs
+++ b/app/modules/editor/pageStructure/templates/editorPageComponentListItem.hbs
@@ -9,7 +9,7 @@
     </div>
   {{/if}}
 </div>
-<div class="editor-component-list-item-overlay display-none">
+<div class="editor-component-list-item-overlay">
   <div class="editor-component-list-item-overlay-inner clearfix">
     {{#if availablePositions.left}}
       <a class="btn primary editor-component-list-item-overlay-button editor-component-list-item-overlay-left" data-position="left">{{t 'app.addtoleft'}}</a>
