--- a/app/modules/contentHeader/less/contentHeader.less
+++ b/app/modules/contentHeader/less/contentHeader.less
@@ -178,12 +178,12 @@
             color: @secondary-color;
           }
           i {
-            margin-right: 8px;
             font-size: 120%;
           }
           .text {
+            margin-left: 8px;
             font-weight: normal;
-            font-size: 110%;
+            font-size: 100%;
           }
         }
       }
